Fixing layout issue.

--- a/src-gwt/org/opencms/ade/galleries/client/ui/css/galleryField.css
+++ b/src-gwt/org/opencms/ade/galleries/client/ui/css/galleryField.css
@@ -113,4 +113,5 @@ div.formats{
 	
 div.descriptionField{
 	margin-left: 170px;
+	margin-top: 5px;
 }
